--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,20 +23,23 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
-
     - name: Build Release APK
       run: ./gradlew assembleRelease
 
-    - name: Upload Debug APK
-      uses: actions/upload-artifact@v4
+    - name: Sign APK
+      uses: r0adkll/sign-android-release@v1
+      id: sign_app
       with:
-        name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.KEY_ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+      env:
+        BUILD_TOOLS_VERSION: "34.0.0"
 
-    - name: Upload Release APK
+    - name: Upload Signed APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-release
-        path: app/build/outputs/apk/release/app-release-unsigned.apk
+        name: app-release-signed
+        path: ${{ steps.sign_app.outputs.signedReleaseFile }}
