edit workflows file

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,23 +24,24 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
+    - name: Decode Keystore
+      run: echo "${{ secrets.SIGNING_KEY }}" | base64 -d > keystore.jks
+
     - name: Build Release APK
       run: ./gradlew assembleRelease
 
     - name: Sign APK
-      uses: r0adkll/sign-android-release@v1
-      id: sign_app
-      with:
-        releaseDirectory: app/build/outputs/apk/release
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        alias: ${{ secrets.KEY_ALIAS }}
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-      env:
-        BUILD_TOOLS_VERSION: "34.0.0"
+      run: |
+        $ANDROID_SDK_ROOT/build-tools/34.0.0/apksigner sign \
+          --ks keystore.jks \
+          --ks-key-alias ${{ secrets.KEY_ALIAS }} \
+          --ks-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
+          --key-pass pass:${{ secrets.KEY_PASSWORD }} \
+          --out app/build/outputs/apk/release/app-release-signed.apk \
+          app/build/outputs/apk/release/app-release-unsigned.apk
 
     - name: Upload Signed APK
       uses: actions/upload-artifact@v4
       with:
         name: app-release-signed
-        path: ${{ steps.sign_app.outputs.signedReleaseFile }}
+        path: app/build/outputs/apk/release/app-release-signed.apk
